# aiq

./: gen-sdk.sh  pyproject.toml
backend/: dump.sql  dumpc.txt  pyproject.toml  qualification_progress.json
backend/src/: api.py  db.py  main.py  progress_tracker.py  robotevents.py  tables.py
backend/src/api/: api.py  auth.py
frontend/: memory.md  package.json
frontend/app/: globals.css  header.tsx  layout.tsx  leaderboard.tsx  page.tsx
frontend/app/components/auth/: sign-in.tsx  sign-up.tsx
frontend/app/dash/: dashboard.tsx  extract.tsx  info.tsx  page.tsx  quals.tsx
frontend/app/dev/: dashboard.tsx  page.tsx  quals.tsx
frontend/app/lib/: auth.ts
frontend/app/signin/: page.tsx
frontend/components/ui/: combobox.tsx  input.tsx  multi-select.tsx  select.tsx
frontend/lib/: auth-client.ts  auth.ts  qualification.ts
frontend/lib/client/: client.gen.ts  index.ts  sdk.gen.ts  types.gen.ts
src/: api.py  db.py  main.py  robotevents.py  teams.py
