[project]
name = "db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.122.0",
    "pymysql>=1.1.2",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
]
